--- a/kafka-consumer-microservice/Dockerfile
+++ b/kafka-consumer-microservice/Dockerfile
@@ -1,11 +1,11 @@
 FROM node:13.7-alpine3.10
 
-ARG WEBHOOK_ARG=inserir_webhook
+# ARG WEBHOOK_ARG=inserir_webhook
 
 ENV TOPICO=meu-topico
-ENV HOST=0.0.0.0
+ENV HOST=127.0.0.1
 ENV PORTA=9092
-ENV WEBHOOK=$WEBHOOK_ARG
+# ENV WEBHOOK=$WEBHOOK_ARG
 ENV CANAL=lab-consumidor
 #ENV CANAL=lab-testes
 
